[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mmVision"
version = "0.1.0"
authors = [
    {name = "Mohammad Ashkezari", email = "mdehghan@uw.edu"},
]
description = "Vision model to classify and analyze marine micro organisms imagery"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["marine microbe", "cyanobacteria", "vision", "deep learning"]
dependencies = [
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "cartopy",
    "pycmap",
    "torch",
    "torchvision",
    "torchmetrics",
    "torchinfo",
    "pytorch-lightning",
    "scikit-learn",
    "tqdm",
    "colorama",
    "seaborn",
    "mlxtend",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]


[tool.setuptools]
py-modules = ["mmVision"]


[project.optional-dependencies]
lint = [
  "flake8"
]

[tool.pytest.ini_options]
addopts = "--doctest-modules -W error::UserWarning"
testpaths = ["tests"]
